Corrected menu scroll fixed positon
Css and functionality of scrolling and clicking menu will enable the menu options to remain seen without covering page.

Used addition of fixed style attribute when scrollY is over 430px to allow for header to disapper. isTop is the state name to control this featuere.

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,21 @@ body {
     background-color: black;
     height: 170px;
 }
+.mainMenu {
+    margin-bottom: 10px;
+
+}
+.innerMainMenu {
+    /*position: fixed;*/
+    width: 100%;
+    overflow: hidden; 
+    display: block;
+
+}
+
+.Overview {
+
+}
 
 .yourImg {
     border-radius: 50%;
@@ -37,8 +52,6 @@ div {
     font-size: 25px;
     text-align: center;
     color: black;
-
-
 }
 
 .nameDiv h1 {
@@ -100,17 +113,30 @@ div {
     
 }
 
-.menu {
+.lowMenu {
     
     background-color: black;
     text-align: center;
     height: 30px;
     position: fixed;
-    top: 70;
+    top: 0;
     width: 100%;
     overflow: hidden; 
 
 }
+
+.highMenu {
+    
+    background-color: black;
+    text-align: center;
+    height: 30px;
+    /*position: fixed;*/
+    top: 0;
+    width: 100%;
+    overflow: hidden; 
+
+}
+
 .menuButton{
     margin-top: 0px;
     margin-left: 1%;
